bppackaging/src/objects/Provider__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Type</label>
        <referenceTo>Transaction_Type__c</referenceTo>
        <relationshipLabel>Provider</relationshipLabel>
        <relationshipName>Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Provider</label>
    <nameField>
        <displayFormat>PN-{00000000}</displayFormat>
        <label>Provider Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>